Fix alignment issue and change vide

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -737,7 +737,6 @@ section.product-list-slider button.slick-arrow.slick-next {
   @apply rounded-tr rounded-br;
 }
 
-
 .your-gym .slick-dots li button:before,
 .your-gym .slick-dots li button {
   width: 10px;
@@ -750,12 +749,16 @@ section.product-list-slider button.slick-arrow.slick-next {
   color: #7a392d !important;
 }
 
-.margin-0-auto{
+.margin-0-auto {
   margin: 0 auto;
 }
 
+.rounded-corner {
+  border-radius: 10px;
+}
+
 @media screen and (max-width: 540px) {
-  .bg-herb-roasted-chicken-breast{
+  .bg-herb-roasted-chicken-breast {
     display: none;
   }
 }
@@ -775,4 +778,3 @@ section.product-list-slider button.slick-arrow.slick-next {
 #reamaze-widget {
   @apply sm:!visible !invisible;
 }
-
